Fixed saved trips not showing full name

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -217,6 +217,10 @@ p{
   margin-top: 20px;
 }
 
+#favNameError, #favLocError{
+  display: none;
+}
+
 #planRouteSubmit{
   margin-top: 30px;
 }
@@ -480,8 +484,9 @@ li{
 
 @media only screen and (max-width: 600px) {
   #map {
-    width: 100%;
-    height: 400px;
+    width: 90%;
+    margin-left: 5%;
+    height: 350px;
   }
 
   .mapContainer{
